# PrintGuard

./: .dockerignore  .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  Dockerfile.headless  README.md  docker-compose.headless.yml  docker-compose.yml  pyproject.toml  release-please-config.json  repository.yaml  requirements-build.txt  requirements-headless.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-image.yml  release-please.yml
docker/mosquitto/: mosquitto.conf  passwordfile
docs/: headless-docker-compose.yml  headless-mqtt-plan.md  headless-mqtt-usage.md
printguard/: __init__.py  config.py  domain.py  health.py  home_assistant.py  main.py  model.py  mqtt.py  policy.py  runner.py  state.py  stream.py
printguard-addon/: CHANGELOG.md  DOCS.md  README.md  config.yaml
printguard-addon/translations/: en.yaml
printguard/headless/: __init__.py  config.py  home_assistant.py  model.py  runner.py
scripts/: download_headless_model.py  download_model.py  generate_constraints.sh
tests/: helpers.py  test_config.py  test_health.py  test_home_assistant.py  test_main.py  test_mqtt.py  test_runner.py  test_state.py  test_stream.py
