[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "printguard"
version = "0.1.0"
description = "Headless MJPEG to MQTT print monitoring service"
authors = [
    { name = "Oliver Bravery", email = "dev@oliverbravery.uk" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy==2.2.6",
    "opencv-python-headless==4.12.0.88",
    "onnxruntime==1.22.1",
    "pillow==11.3.0",
    "paho-mqtt==2.1.0"
]

[project.scripts]
printguard = "printguard.main:run"

[tool.black]
line-length = 88

[tool.setuptools.packages.find]
include = ["printguard", "printguard.*"]
